554614:TISSQAEE-1105:PDP page alignment is not proper in iOS 5s device 554614:INC144316370:Alignment issue in Apple iOS 5s device-Web Responsive

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -68939,3 +68939,11 @@ body.page-viewAllTrending #ia_products_hot .listing.wrapper .left-block .listing
 }
 }
 /*PRDI-227 end*/
+
+/* start change of TISSQAEE-1105, INC144316370 & INC144316762  */
+@media (max-width: 414px){
+	#ReviewSecion.reviews .half .rate-details.three-block span{
+		float:left;
+	}
+}
+/* end change of TISSQAEE-1105, INC144316370 & INC144316762  */
